--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,28 @@
             <div class="col-md-3 margin-btm20">
                 <div class="footer-column">
                     <h3>Schedule</h3>
+                    
                     {% include schedule.html %}
 
+                </div><!--footer columns end-->
+            </div>
+
+            <div class="col-md-3 margin-btm20">
+                <div class="footer-column">
+                    <h3>Location</h3>
+                    <ul class="list-unstyled contact-list margin-btm20">
+                        <li>
+                            <a href="http://improvingenterprises.com" class="hover-color">
+                                <i class="ion-home"></i>
+                                Improving Enterprises
+                            </a>
+                        </li>
+                        <li>
+                            16633 N. Dallas Parkway <br>
+                            Suite 100<br>
+                            Addison, TX 75001
+                        </li>
+                    </ul>
                 </div><!--footer columns end-->
             </div>
 
@@ -24,14 +44,8 @@
                 <div class="footer-column">
                     <h3>Get in touch</h3>
                     <ul class="list-unstyled contact-list margin-btm20">
-                        <li>
-                            <i class="ion-home"></i>
-                            16633 N. Dallas Parkway <br>
-                            Suite 100<br>
-                            Addison, TX 75001
-                        </li>
-                        <li><i class="ion-ios7-email"></i> <strong>Email:</strong> contact@dallas-csharp-sig.com</li>
-                        <li><i class="ion-ios7-world"></i> <strong>Website:</strong> http://www.dallas-csharp-sig.com</li>
+                        <li><i class="ion-ios7-email"></i> contact@dallas-csharp-sig.com</li>
+                        <li><i class="ion-ios7-world"></i> http://www.dallas-csharp-sig.com</li>
                     </ul>
                     <ul class="list-unstyled list-inline social">
                         <li>
