--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -14,9 +14,11 @@
 		{% for meeting in group[1] %}
 
 			<h2>{{ meeting.title }}</h2>
+			<h3>{{ meeting.date }}</h2>
+			<h3>{{ meeting.speaker }}</h2>
 
 		{% endfor %}
-		
+
 	{% endfor %}
 
 </body>
