--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,29 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">   
+    <title>Dallas C# Sig</title>
+    <meta name="description" content="HTML5 & CSS3">
+    <meta name="keywords" content="HTML5, CSS3, Theme,bootstrap3,clean design"> 
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <!--bootstrap3 css-->
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--ion icon fonts css-->
+    <link href="/icons/css/ionicons.css" rel="stylesheet">
+    <!--custom css-->
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+     <!--animate css-->
+    <link href="/css/animate.css" rel="stylesheet" type="text/css">
+    <!--google open sans font-->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <!--flex slider css-->
+    <link href="/css/flexslider.css" rel="stylesheet">
+    <link href="/css/csharpsig.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
