--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,28 +1,28 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Dallas C# Sig</a>
-                </div>
-                <div class="navbar-collapse collapse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Dallas C# Sig</a>
+        </div>
+        <div class="navbar-collapse collapse">
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="/meetings" class="">Meetings</a>
-                        </li>
-                        <li>
-                            <a href="/emailSignup" class="">Email Signup</a>
-                        </li>
-                        <li>
-                            <a href="/about" class="">About</a>
-                        </li>
-                    </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/meetings" class="">Meetings</a>
+                </li>
+                <li>
+                    <a href="/emailSignup" class="">Email Signup</a>
+                </li>
+                <li>
+                    <a href="/about" class="">About</a>
+                </li>
+            </ul>
 
-                </div><!--/.nav-collapse -->
-            </div><!--/.container-->
-        </div><!--navigation end-->
+        </div><!--/.nav-collapse -->
+    </div><!--/.container-->
+</div><!--navigation end-->
