--- a/_layouts/meetings.html
+++ b/_layouts/meetings.html
@@ -1,18 +1,15 @@
 ---
 layout: default
+title: 'Meetings'
 ---
 
-<div class="container first-page-content">
+<div class="row margin-btm40">
 {% for group in page.groupedMeetings %}
 	
 	<h1>{{ group[0] }}</h1>
-	{% for meeting in group[1] %}
+	{% for page in group[1] %}
 
-		<h2>{{ meeting.title }}</h2>
-		<h3>{{ meeting.date | date: "%B %-d, %Y" }}</h2>
-		<h3>{{ meeting.speaker }}</h2>
-		<p>{{ meeting.abstract }}</p>
-
+		{% include meetingSummary.html %}
 
 	{% endfor %}
 
