Cleaning up the about page formatting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,9 @@
     <!--flex slider css-->
     <link href="/css/flexslider.css" rel="stylesheet">
     <link href="/css/csharpsig.css" rel="stylesheet">
+    {% for stylesheet in page.stylesheets %}
+    {{ stylesheet }}
+    {%  endfor %}
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
