--- a/_includes/meetingSummary.html
+++ b/_includes/meetingSummary.html
@@ -1,4 +1,4 @@
-<div class="row col-md-12 blog-items meeting ">
+<div class="blog-items meeting ">
     <h2><a href="{{ page.url | prepend: site.baseurl }}" class="hover-color">{{ page.title }}</a></h2>
     <ul class="list-inline blog-post-list">
         <li>
@@ -17,7 +17,6 @@
         </li>
     </ul>
 
-    <h3>Abstract</h3>
     <p>
         {{ page.abstract}}
     </p>
