--- a/_includes/fullMeeting.html
+++ b/_includes/fullMeeting.html
@@ -6,16 +6,22 @@
             <i class="ion-calendar"></i>
             {{ page.date | date: "%B %-d, %Y" }}
         </li>
+
+        {% if page.speaker %}
         <li>|</li>
         <li>
             <i class="ion-ios7-person"></i>{{ page.speaker }}
         </li>
+        {% endif %}
+
+        {% if page.twitter %}        
         <li>|</li>
         <li>
             <a href="https://twitter.com/{{ page.twitter }}" class="hover-color">
                 <i class="ion-social-twitter-outline"></i>
             </a>
         </li>
+        {% endif %}
     </ul>
 
     <h3>Abstract</h3>
@@ -23,9 +29,11 @@
         {{ page.abstract}}
     </p>
 
+    {% if page.bio %}
     <h3>{{ page.speaker }}'s Bio</h3>
     <p>
         {{ page.bio }}
     </p>
+    {% endif %}
 
 </div>
