--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,3 +6,6 @@
 <script src="/js/jquery.mixitup.min.js" type="text/javascript"></script>
 <script src="/js/wow.min.js" type="text/javascript"></script>
 <script src="/js/app.js" type="text/javascript"></script>
+{% for script in page.scripts %}
+{{ script }}
+{%  endfor %}
