--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 		        </div><!--row-->
 		    </div><!--container-->
 		</section><!--page-tree-->
+
+		<div class="divied-60"></div>
 		
 		{{ content}}
 
