--- a/_layouts/highlight.html
+++ b/_layouts/highlight.html
@@ -9,8 +9,9 @@
         {% include navbar.html %}
 
         <section id="hightlight-sec-2" class="padding-60">
-            
         </section>
+
+        <div class="divied-60"></div>
 
 		<div class="container">
 			{{ content}}
