--- a/_layouts/meetings.html
+++ b/_layouts/meetings.html
@@ -5,9 +5,9 @@ title: 'Meetings'
 
 <div class="container meeting-list">
 	<div class="margin-btm40">
-	{% for group in page.groupedMeetings %}
+	{% for group in page.groupedMeetings limit:2%}
 		
-		<h1>{{ group[0] }}</h1>
+		<h1><a class="hover-color" href="/meetings/{{ group[0] }}/">{{ group[0] }}</a></h1>
 		{% for page in group[1] %}
 
 			{% include meetingSummary.html %}
@@ -16,4 +16,11 @@ title: 'Meetings'
 
 	{% endfor %}
 	</div>
+
+	<h2><a class="hover-color" href="/meetings/2015/">2015 Meetings</a></h2>
+	<h2><a class="hover-color" href="/meetings/2014/">2014 Meetings</a></h2>
+	<h2><a class="hover-color" href="/meetings/2013/">2013 Meetings</a></h2>
+	<h2><a class="hover-color" href="/meetings/2012/">2012 Meetings</a></h2>
+	<h2><a class="hover-color" href="/meetings/2011/">2011 Meetings</a></h2>
+	<h2><a class="hover-color" href="/meetings/2010/">2010 Meetings</a></h2>
 </div>
