--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -7,9 +7,22 @@
             </div> -->
             
             <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
+                <a href="http://www.improvingenterprises.com">
                     <div class="image-sec">
-                        <img class="img-responsive" src="img/img-6.jpg" alt="Portfolio">
+                        <img class="img-responsive" src="img/Improving-logo-lg.jpg" alt="Portfolio">
+                        <div class="image-overlay">
+                            <p>
+                                <i class="ion-ios7-plus-empty"></i>
+                            </p>
+                        </div>
+                    </div> <!--image-->                          
+                </a>
+            </div>
+            
+            <div class="col-sm-4 col-xs-12 margin-btm20">
+                <a href="http://www.pluralsight.com">
+                    <div class="image-sec">
+                        <img class="img-responsive" src="img/pluralsight.jpg" alt="Portfolio">
                         <div class="image-overlay">
                             <p>
                                 <i class="ion-ios7-plus-empty"></i>
@@ -22,20 +35,7 @@
             <div class="col-sm-4 col-xs-12 margin-btm20">
                 <a href="blog-post.html">
                     <div class="image-sec">
-                        <img class="img-responsive" src="img/img-1.jpg" alt="Portfolio">
-                        <div class="image-overlay">
-                            <p>
-                                <i class="ion-ios7-plus-empty"></i>
-                            </p>
-                        </div>
-                    </div> <!--image-->                          
-                </a>
-            </div>
-            
-            <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
-                    <div class="image-sec">
-                        <img class="img-responsive" src="img/img-2.jpg" alt="Portfolio">
+                        <img class="img-responsive" src="img/telerik.jpeg" alt="Portfolio">
                         <div class="image-overlay">
                             <p>
                                 <i class="ion-ios7-plus-empty"></i>
@@ -48,7 +48,7 @@
             <div class="col-sm-4 col-xs-12 margin-btm20">
                 <a href="blog-post.html">
                     <div class="image-sec">
-                        <img class="img-responsive" src="img/img-6.jpg" alt="Portfolio">
+                        <img class="img-responsive" src="img/resharper.png" alt="Portfolio">
                         <div class="image-overlay">
                             <p>
                                 <i class="ion-ios7-plus-empty"></i>
@@ -85,7 +85,7 @@
             </div>  
             
             <div class="divied-40"></div>
-            
+
         </div><!--row-->    
     </div><!--container-->
 </section><!--latest news-->
