cleaning up the sponsors

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,39 +1,38 @@
 <section id="latest-news" class="padding-60">
     <div class="container">
         <div class="row">
-            
+
             <!-- <div class="col-md-12 margin-btm40 text-center">
                 <h1>Sponsors</h1>
             </div> -->
-            
+              <div class="col-xs-12 margin-btm20">
+                  <a href="http://www.improvingenterprises.com">
+                      <div class="image-sec">
+                          <img class="img-responsive improving center" src="img/Improving-logo-lg.jpg" alt="Portfolio">
+                          <div class="image-overlay">
+                              <p>
+                                  <i class="ion-ios7-plus-empty"></i>
+                              </p>
+                          </div>
+                      </div> <!--image-->
+                  </a>
+              </div>
+
+              <div class="col-xs-12 margin-btm20">
+                  <a href="http://www.pluralsight.com">
+                      <div class="image-sec">
+                          <img class="img-responsive center" src="img/pluralsight.jpg" alt="Portfolio">
+                          <div class="image-overlay">
+                              <p>
+                                  <i class="ion-ios7-plus-empty"></i>
+                              </p>
+                          </div>
+                      </div> <!--image-->
+                  </a>
+              </div>
+
             <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="http://www.improvingenterprises.com">
-                    <div class="image-sec">
-                        <img class="img-responsive" src="img/Improving-logo-lg.jpg" alt="Portfolio">
-                        <div class="image-overlay">
-                            <p>
-                                <i class="ion-ios7-plus-empty"></i>
-                            </p>
-                        </div>
-                    </div> <!--image-->                          
-                </a>
-            </div>
-            
-            <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="http://www.pluralsight.com">
-                    <div class="image-sec">
-                        <img class="img-responsive" src="img/pluralsight.jpg" alt="Portfolio">
-                        <div class="image-overlay">
-                            <p>
-                                <i class="ion-ios7-plus-empty"></i>
-                            </p>
-                        </div>
-                    </div> <!--image-->                          
-                </a>
-            </div>
-            
-            <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
+                <a href="http://www.telerik.com/">
                     <div class="image-sec">
                         <img class="img-responsive" src="img/telerik.jpeg" alt="Portfolio">
                         <div class="image-overlay">
@@ -41,12 +40,12 @@
                                 <i class="ion-ios7-plus-empty"></i>
                             </p>
                         </div>
-                    </div> <!--image-->                          
+                    </div> <!--image-->
                 </a>
             </div>
 
             <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
+                <a href="https://www.jetbrains.com/resharper/">
                     <div class="image-sec">
                         <img class="img-responsive" src="img/resharper.png" alt="Portfolio">
                         <div class="image-overlay">
@@ -54,38 +53,25 @@
                                 <i class="ion-ios7-plus-empty"></i>
                             </p>
                         </div>
-                    </div> <!--image-->                          
+                    </div> <!--image-->
                 </a>
             </div>
-            
+
             <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
+                <a href="http://www.red-gate.com/">
                     <div class="image-sec">
-                        <img class="img-responsive" src="img/img-1.jpg" alt="Portfolio">
+                        <img class="img-responsive" src="img/redgate.jpg" alt="Portfolio">
                         <div class="image-overlay">
                             <p>
                                 <i class="ion-ios7-plus-empty"></i>
                             </p>
                         </div>
-                    </div> <!--image-->                          
+                    </div> <!--image-->
                 </a>
             </div>
-            
-            <div class="col-sm-4 col-xs-12 margin-btm20">
-                <a href="blog-post.html">
-                    <div class="image-sec">
-                        <img class="img-responsive" src="img/img-2.jpg" alt="Portfolio">
-                        <div class="image-overlay">
-                            <p>
-                                <i class="ion-ios7-plus-empty"></i>
-                            </p>
-                        </div>
-                    </div> <!--image-->                          
-                </a>
-            </div>  
-            
+
             <div class="divied-40"></div>
 
-        </div><!--row-->    
+        </div><!--row-->
     </div><!--container-->
 </section><!--latest news-->
