--- a/_includes/fullMeeting.html
+++ b/_includes/fullMeeting.html
@@ -22,6 +22,16 @@
             </a>
         </li>
         {% endif %}
+
+        {% if page.github %}        
+        <li>|</li>
+        <li>
+            <a href="{{ page.github }}" class="hover-color">
+                <i class="ion-social-github-outline"></i>
+            </a>
+        </li>
+        {% endif %}
+
     </ul>
 
     <h3>Abstract</h3>
