--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -6,7 +6,7 @@
                 <h1>Sponsors</h1>
             </div> -->
               <div class="col-xs-12 margin-btm20">
-                  <a href="http://www.improvingenterprises.com">
+                  <a href="http://www.improving.com">
                       <div class="image-sec">
                           <img class="img-responsive improving center" src="img/Improving-logo-lg.jpg" alt="Portfolio">
                           <div class="image-overlay">
